objects/SFDC_MDF_Claim__c.object
<CustomObject>
    <description>A set of claims tied to a specific fund request.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Fund_Request__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account that made the claim request. Typically updated via a scontrol or APEX code rather than having the partner select their own account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDKEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>The number of elapsed days since the claim was created</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the current claim</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>The date the fund claim was approved. This should be updated through a workflow approval process.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger budget recalculate workflow</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <label>Attn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_V1__c</fullName>
        <formula>Fund_Request__r.Budget__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally assign the fund claim to a budget. This budget is typically the same budget as the fund request is assigned to</description>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>SFDC_Budget__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Budget__c</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDZEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Details__c</fullName>
        <description>High level information about the fund claim</description>
        <label>Claim Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <description>A unique id assigned to the fund claim. Optionally useful for the partner as a means to identify the specific fund claim record.</description>
        <displayFormat>{YY}{MM}{DD}-{0}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Claim_Paid_Date__c</fullName>
        <description>Claim paid date</description>
        <label>Claim Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <description>A list of available activity/ expenditure types. Customize as needed</description>
        <label>Expenditure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Print &amp; Digital Advertising</fullName>
                </value>
                <value>
                    <fullName>2. Direct Mail / Email campaigns</fullName>
                </value>
                <value>
                    <fullName>3. Advertising Specialties / Promotional Items</fullName>
                </value>
                <value>
                    <fullName>4. Website Development</fullName>
                </value>
                <value>
                    <fullName>5.Tradeshow &amp; Special Events</fullName>
                </value>
                <value>
                    <fullName>6. Product Display Cases</fullName>
                </value>
                <value>
                    <fullName>7. Technical / Training Seminars</fullName>
                </value>
                <value>
                    <fullName>8. Business Related Entertainment</fullName>
                </value>
                <value>
                    <fullName>9. Sales Contests</fullName>
                </value>
                <value>
                    <fullName>10. Distributor Marketing Programs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Approved_Date__c</fullName>
        <label>Final Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <formula>&quot;Debra Warren&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Claim_Invoice_Sent_Date__c</fullName>
        <label>Fund Claim Invoice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note: This cannot be a master detail relationship if you plan to use approval workflow as the fund request will be locked (during approval and most likely post approval) and therefore any child claims cannot be saved</description>
        <label>Fund Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>SFDC_MDF__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_MDF__c</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDcEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Approver__c</fullName>
        <formula>&quot;Debra Warren&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intial_Approved_Date__c</fullName>
        <label>Intial Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Expenditure_Type__c</fullName>
        <description>Used when the user chooses &apos;other&apos; as the expenditure type</description>
        <label>Other Expenditure Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <formula>Owner:User.Street + &quot; &quot; + Owner:User.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <formula>Owner:User.State + &quot; &quot; + Owner:User.PostalCode + &quot; &quot; + Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Check_Number__c</fullName>
        <description>Check number used to pay claim.</description>
        <label>Paid Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that owns the partner account. Should be updated/ set automatically by an APEX trigger or scontrol rather than entered by the user</description>
        <label>Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002DjDeEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>How the claim payment was paid/ processed</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the partner or the vendor (depending on the field level security and implementation specifics) to indicate that the claim has supporting documentation</description>
        <label>Performance Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proof of performance verified by the vendor.</description>
        <label>Performance Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remit_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account billed for this activity. May be different from the Account on the Budget and Fund request</description>
        <inlineHelpText>The partner account billed for this activity.</inlineHelpText>
        <label>Remit-To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund Claims (Remit-To)</relationshipLabel>
        <relationshipName>Fund_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remit_to_Address__c</fullName>
        <formula>Remit_To__r.Name + &quot; &quot; + Remit_To__r.BillingStreet + &quot; &quot; + Remit_To__r.BillingCity + &quot; &quot; + Remit_To__r.BillingState + &quot; &quot; + Remit_To__r.BillingPostalCode + &quot; &quot; + Remit_To__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit-to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Attention__c</fullName>
        <label>Remit-to Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The fund claim approval status. This should be updated through an approval process rather than changing through the user interface</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Invoice_Sent_for_Pymt__c</fullName>
        <description>requested by Carol Toder</description>
        <label>TE Invoice Sent for Pymt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fund Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_claims</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Budget__c</columns>
        <columns>Fund_Request__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved claims</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Claims</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Budget__c</columns>
        <columns>Account__c</columns>
        <columns>Fund_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Submitted,In Process</value>
        </filters>
        <label>Open Claims</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Limits</fullName>
        <active>true</active>
        <description>The amount must be greater than zero</description>
        <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The claim amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Expenditure_Type</fullName>
        <active>true</active>
        <description>Used to force the user to choose fill in the &apos;other expenditure type&apos; when &apos;other&apos; is chosen as the expenditure type</description>
        <errorConditionFormula>AND(ISPICKVAL( Expenditure_Type__c, &quot;Other&quot;), LEN(Other_Expenditure_Type__c )=0)</errorConditionFormula>
        <errorDisplayField>Other_Expenditure_Type__c</errorDisplayField>
        <errorMessage>Please provide details on the &apos;Other&apos; expenditure type.</errorMessage>
    </validationRules>
</CustomObject>